<resources>
    <string name="app_name">Mayeul M.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connexion_title">Connexion</string>
    <string name="img_desc">ISEN logo</string>
    <string name="prompt_identifiant">Identifiant</string>
    <string name="life_cycle">Cycle de vie</string>
    <string name="web_services">Webservices</string>
    <string name="save">Sauvegarde</string>
    <string name="permissions">Permissions</string>
    <string name="phoneDesc">Phone call</string>
    <string name="chatDesc">Chat bubble</string>
    <string name="simDesc">Sim card</string>
    <string name="dlDesc">Download</string>
    <string name="valid_input">Valider</string>
    <string name="life_cycle_state" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar3_desc">Cat</string>
    <string name="avatar2_desc">Dog</string>
    <string name="deconnection">Déconnexion</string>
    <string name="form_title">Infos Utilisateurs</string>
    <string name="save_user">Enregistrer</string>
    <string name="see_user_infos">Afficher</string>
    <string name="hint_last_name">Nom</string>
    <string name="hint_first_name">Prénom</string>
    <string name="hint_birth_date">01/01/2001</string>
    <string name="date_picker">Sélection</string>
    <string name="perm_title">Info Android</string>
    <string name="latt_text">Lattitude : </string>
    <string name="long_text">Longitude : </string>
    <string name="select_img_desc">Image Sélectionnée</string>
    <string name="img_contact_load">Contact en chargement</string>
    <string name="login_img">Ghost</string>
    <string name="test_item">Test</string>
    <string name="call_img">Phone call</string>
    <string name="random_profile_pic">Random image</string>
    <string name="change_fragment_button">Fragment swap button (désactivé)</string>
    <string name="fragment_one_text">Je suis le fragment 1 (ง ͠° ͟ل͜ ͡°)ง</string>
    <string name="fragment_two_text">Et moi le fragment 2 (▀̿Ĺ̯▀̿ ̿)</string>
    <string name="web_service_img">Download arrow</string>
    <string name="swipe_info">Swipe !</string>
    <string name="title_activity_email_password_auth">EmailPasswordAuthActivity</string>
    <string name="delete_user">Supprimer utilisateur</string>

    <!-- FACEBOOK -->
    <!-- <string name="facebook_application_id" translatable="false">780613675792350</string> -->
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <!-- <string name="facebook_login_protocol_scheme" translatable="false">fb780613675792350</string> -->
</resources>
