<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/welcomeImgInput"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/img_desc"
        app:layout_constraintBottom_toTopOf="@id/HelloTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nap_transp" />

    <TextView
        android:id="@+id/HelloTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/lifeCycleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeImgInput"
        app:layout_constraintVertical_bias="0.129" />

    <ImageView
        android:id="@+id/lifeCycleButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/chatDesc"
        app:layout_constraintBottom_toTopOf="@+id/permButton"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelloTitle"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/simDesc"
        app:layout_constraintBottom_toTopOf="@id/webButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lifeCycleButton"
        app:layout_constraintTop_toBottomOf="@+id/HelloTitle"
        app:srcCompat="@android:drawable/stat_notify_sdcard" />

    <ImageView
        android:id="@+id/permButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/phoneDesc"
        app:layout_constraintBottom_toTopOf="@+id/disconnectButton"
        app:layout_constraintEnd_toStartOf="@+id/webButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifeCycleButton"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <ImageView
        android:id="@+id/webButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/dlDesc"
        app:layout_constraintBottom_toTopOf="@+id/disconnectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/permButton"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:srcCompat="@android:drawable/stat_sys_download_done" />

    <TextView
        android:id="@+id/perm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/permButton"
        app:layout_constraintStart_toStartOf="@+id/permButton"
        app:layout_constraintTop_toBottomOf="@+id/permButton" />

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_services"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/webButton"
        app:layout_constraintStart_toStartOf="@+id/webButton"
        app:layout_constraintTop_toBottomOf="@+id/webButton" />

    <TextView
        android:id="@+id/lifeCycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/life_cycle"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lifeCycleButton"
        app:layout_constraintStart_toStartOf="@+id/lifeCycleButton"
        app:layout_constraintTop_toBottomOf="@+id/lifeCycleButton" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/deconnection"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/webButton" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/delete_user"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/disconnectButton"
        app:layout_constraintTop_toBottomOf="@id/webButton" />

</androidx.constraintlayout.widget.ConstraintLayout>