<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveActivity">

    <TextView
        android:id="@+id/saveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/form_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/firstNameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveTitle"
        app:passwordToggleTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/birthDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameLayout"
        app:passwordToggleTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/birthDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_birth_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/formButton"
        app:layout_constraintEnd_toStartOf="@id/datePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameLayout"
        app:passwordToggleTint="@color/colorPrimary" />

    <Button
        android:id="@+id/seeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:background="@color/colorPrimary"
        android:text="@string/see_user_infos"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/formButton" />

    <Button
        android:id="@+id/formButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:background="@color/colorPrimary"
        android:text="@string/save_user"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seeButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/date_picker"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/seeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birthDateText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>